<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.endor.webapp</groupId>
	<artifactId>endor-java-webapp-demo</artifactId>
	<version>4.0-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>endor-webapp Maven Webapp</name>
	<!-- FIXME change it to the projects website -->
	<url>http://www.example.com</url>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>
	<dependencies>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
		</dependency>
		<dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>1.10.0</version>
        </dependency>
       <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>8.2.0</version>
        </dependency>
        <dependency>
			<groupId>com.mchange</groupId>
			<artifactId>c3p0</artifactId>
			<version>0.9.5.2</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.weld</groupId>
			<artifactId>weld-core</artifactId>
			<version>1.1.33.Final</version>
			<exclusions>
				<exclusion>
					<groupId>javax.enterprise</groupId>
					<artifactId>cdi-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>javax.annotation</groupId>
					<artifactId>jsr250-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.jboss.spec.javax.interceptor</groupId>
					<artifactId>jboss-interceptors-api_1.1_spec</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.javassist</groupId>
					<artifactId>javassist</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.17.0</version>
            <optional>true</optional>
            <scope>test</scope>
        </dependency>
        <dependency>
			<groupId>com.nqzero</groupId>
			<artifactId>permit-reflect</artifactId>
			<version>0.3</version>
		</dependency>	
	     <dependency>
	        <groupId>org.jboss.arquillian.config</groupId>
	        <artifactId>arquillian-config-spi</artifactId>
	        <version>1.7.0.Alpha12</version>
	      </dependency>
	       <dependency>
	        <groupId>org.jboss.arquillian.container</groupId>
	        <artifactId>arquillian-container-impl-base</artifactId>
	        <version>1.7.0.Alpha12</version>
	      </dependency>
	       <dependency>
	        <groupId>org.jboss.shrinkwrap.descriptors</groupId>
	        <artifactId>shrinkwrap-descriptors-api-base</artifactId>
	        <version>2.0.0</version>
	      </dependency>
	       <dependency>
	        <groupId>org.jboss.shrinkwrap</groupId>
	        <artifactId>shrinkwrap-impl-base</artifactId>
	        <version>1.2.6</version>
	      </dependency>
	      <dependency>
	        <groupId>org.mockito</groupId>
	        <artifactId>mockito-core</artifactId>
	        <version>2.28.2</version>
	      </dependency>
	      <dependency>
	        <groupId>com.google.errorprone</groupId>
	        <artifactId>error_prone_annotations</artifactId>
	        <version>2.7.1</version>
	      </dependency>
	      <dependency>
	        <groupId>org.webjars.bowergithub.webcomponents</groupId>
	        <artifactId>webcomponentsjs</artifactId>
	        <version>2.0.0-beta.3</version>
	      </dependency>
	      <dependency>
	        <groupId>org.webjars.bowergithub.webcomponents</groupId>
	        <artifactId>shadycss</artifactId>
	        <version>1.9.1 </version>
	      </dependency>
	      <dependency>
        	<groupId>org.semver</groupId>
        	<artifactId>api</artifactId>
        	<version>0.9.33</version>
        	<exclusions>
				<exclusion>
					<groupId>com.google.code.findbugs</groupId>
					<artifactId>jsr305</artifactId>
				</exclusion>
				<exclusion>
					<groupId>commons-lang</groupId>
					<artifactId>commons-lang</artifactId>
				</exclusion>
				<exclusion>
					<groupId>de.tototec</groupId>
					<artifactId>de.tototec.cmdoption</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.ow2.asm</groupId>
					<artifactId>asm</artifactId>
				</exclusion>
			</exclusions>
      	  </dependency>
	</dependencies>

	<build>
		<finalName>endor-java-webapp-demo</finalName>
		<pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
			<plugins>
				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging -->
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.0.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-war-plugin</artifactId>
					<version>3.2.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.5.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.2</version>
				</plugin>
				    <plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-jar-plugin</artifactId>
			<version>2.4</version>
			<configuration>
								<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>dependency</classpathPrefix>
							<mainClass>com.endor.AppServlet</mainClass>
						</manifest>
					</archive>
			</configuration>
			</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>8</source>
					<target>8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
